--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -1,97 +1,97 @@
 l_english:
 
 ### Focuses - Economic ###
-NEE_building_our_economy:0 "Building our Economy"
+NEE_building_our_economy:0 "경제 건설"
 NEE_building_our_economy_desc:0 "As we are now cut off from the rest of America due to the chaos of the civil war, we should focus on building our economy. It will take time, but it will help make sure that we can build up our own economy."
-NEE_new_haven_railroad:0 "New Haven Railroad"
+NEE_new_haven_railroad:0 "뉴헤븐 철도"
 NEE_new_haven_railroad_desc:0 "One of the major railroad lines in the Region is the New Haven Railroad. We should help support the company so that we can improve our infrastructure throughout New England."
-NEE_iron_mines:0 "Iron Mines"
+NEE_iron_mines:0 "철 광산"
 NEE_iron_mines_desc:0 "Officials in Bangor report that a sizeable iron deposit has been discovered! Iron mining will begin immediately!"
-NEE_maine_mines:0 "Maine Mines"
+NEE_maine_mines:0 "메인 광산"
 NEE_maine_mines_desc:0 "New England is a small country with a lot of open space in the North. Many areas have not even been settled, we should survey them."
-NEE_industrial_science:0 "Industrial Science"
+NEE_industrial_science:0 "공업 과학"
 NEE_industrial_science_desc:0 "We should put our various scientists to work in helping us expand our industry and help modernise our economy. If we are to build up our economy, we need the most modern industry that we can design and make."
-NEE_support_ivy_league:0 "Support the Ivy League"
+NEE_support_ivy_league:0 "아이비 리그 지원"
 NEE_support_ivy_league_desc:0 "The ivy league schools are a group of prestigious and well respected universities that are scattered throughout New England for the most part. By giving them support, we will be able to reap the benefits of the research that is done within them."
-NEE_expand_ivy_league:0 "Expand the Ivy League"
+NEE_expand_ivy_league:0 "아이비 리그 확장"
 NEE_expand_ivy_league_desc:0 "We should help expand the Ivy league by supporting the other prestigious and well respected universities in our Country. By supporting more universities we can further help expand our research."
-NEE_atlantic_trade:0 "Atlantic Trade"
+NEE_atlantic_trade:0 "대서양 무역"
 NEE_atlantic_trade_desc:0 "We have always relied on trade from the Atlantic from the moment the Puritans settled in New England. We should expand our various factories that benefit our Atlantic trade so that we can preserve the lifeblood of our economy."
-NEE_aviation_industry:0 "Aviation Industry"
+NEE_aviation_industry:0 "항공 산업"
 NEE_aviation_industry_desc:0 "To expand our industry, we should help promote and expand the aviation industry in New England. Not only will this help improve the lives of our people, but it will make it easier to use the Air Ports for war should it ever come to that."
-NEE_maritime_industry:0 "Maritime Industry"
+NEE_maritime_industry:0 "해양 산업"
 NEE_maritime_industry_desc:0 "The sea is our lifeblood. It always has been since before even the colonists were here. We should do what we can to help support our Maritime Industry and trade. By expanding our ports we will be able to have not only better Maritime trade, but also prepare our coast guard should we go to war."
 
 ### Focuses - Army ###
-NEE_national_guard:0 "New England National Guard"
+NEE_national_guard:0 "뉴 잉글랜드 주 방위군"
 NEE_national_guard_desc:0 "As the chaos of war engulfs the rest of the country, we should combine all the national guard forces of the states that make up New England in order to be a single National Guard Force. This will help protect us should war come to us."
-NEE_planed_battle:0 "McLaws Planned Battle"
+NEE_planed_battle:0 "맥로즈의 조직 전투"
 NEE_planed_battle_desc:0 "Now that we have made the New England national guard, we should support John McLaws Planned Battle strategy for defending New England. We may not have the most powerful army, we can plan properly for any encounter and thus New England shall be kept free."
-NEE_joint_chiefs_of_staff:0 "Joint Chiefs of Staff"
+NEE_joint_chiefs_of_staff:0 "합동참모부"
 NEE_joint_chiefs_of_staff_desc:0 "To continue with McLaws planned battle plan, we shall create the Joint Chiefs of Staff. This will help us prepare for any threat that we shall have to deal with should war come to New England and will plan any contingencies to counter the threats."
-NEE_flexible_fire_control:0 "Flexible Fire Control"
+NEE_flexible_fire_control:0 "유연한 사격 통제"
 NEE_flexible_fire_control_desc:0 "We know that any plan won't survive first contact with the enemy. So thus we shall encourage our military to make the plans that can be rapidly changed at the front to take into account the changing nature of war."
-NEE_combined_arms:0 "Chipman's Combined Arms"
+NEE_combined_arms:0 "치프만의 제병 합동"
 NEE_combined_arms_desc:0 "Now that we have made the New England national guard, we should support Leslie Chipman's combined arms strategy for defending New England. We have a small population here in new England, so the key to war will be to strike fast and strike hard. This shall keep New England safe."
-NEE_walkie_talkies:0 "Walkie-talkies"
+NEE_walkie_talkies:0 "워키-토키"
 NEE_walkie_talkies_desc:0 "Working together with our Canadian friends and allies we have begun to develop a new hand held two way communication device that uses radio waves. This will greatly help communication during any conflict. It would be good to make sure that our National Guard has as many of these walkies-talkies to better defend New England."
-NEE_motorized_infantry:0 "Infantry Tank"
+NEE_motorized_infantry:0 "보병 전차"
 NEE_motorized_infantry_desc:0 "As part of the Chipman's combined arms strategy we are to encourage the concept of Infantry Tanks. By having the Infantry and the tanks work in tandem with one another it will improve the efficiency of both are Tanks and our Infantry."
-NEE_curiser_tanks:0 "Cruiser Tanks"
+NEE_curiser_tanks:0 "순항 전차"
 NEE_curiser_tanks_desc:0 "As part of the Combined Arms strategy, we should focus on researching and producing Cruiser Tanks. Tanks that will strike fast and hard, and be the tip of the spear that shall be followed up by our infantry who come in right after them."
-NEE_new_officers:0 "New Officers"
+NEE_new_officers:0 "장교진 양성"
 NEE_new_officers_desc:0 "With the National Guard of New England's modernisation nearly done. We should bring in the new officers from West Point into the Army. This will help provide a new generation of officers to help finish our modernisation of the Army."
 
 ### Focuses - Naval ###
-NEE_coast_guard:0 "New England Coast Guard"
+NEE_coast_guard:0 "뉴잉글랜드 해안경비대"
 NEE_coast_guard_desc:0 "We should reorganise the various Coast Guard of the different states that make up new England into one organisation. By reorganising this way, we will form the New England Coast Guard and better defend our coast."
-NEE_submarines_effort:0 "Submarine tactics and doctrines"
+NEE_submarines_effort:0 "잠수함 전술 및 교리"
 NEE_submarines_effort_desc:0 "We should focus on sinking the enemies ships before they can even arrive to New England. The navies of the International may very well try to invade New England and we should focus on sinking their ships before they ever arrive near our shores."
-NEE_submarine_doctrines:0 "Submarine Effort"
+NEE_submarine_doctrines:0 "잠수함에 투자"
 NEE_submarine_doctrines_desc:0 "As we focus on Submarines we should focus on building up the navy bases to produce more Submarines and help modernise our submarine fleet. This will make sure that no enemy will approach the shores of New England."
-NEE_protect_trade:0 "Protect our Trade"
+NEE_protect_trade:0 "무역 보호"
 NEE_protect_trade_desc:0 "Our principal focus of the New England Coast Guard should be to protect our trade. We are after all a small trading country, and our navy should be geared towards preventing any threats from harming our convoys and trade ships."
-NEE_new_admirals:0 "Naval Station Newport"
+NEE_new_admirals:0 "뉴포트 해군 기지"
 NEE_new_admirals_desc:0 "The principal naval station in New England is the Newport Naval Station. We should fund it and work to help expand it. This will help with training a new generation of admirals for New England."
-NEE_cruisers_doctrines:0 "Cruisers and Escorts"
+NEE_cruisers_doctrines:0 "순양함과 호위함"
 NEE_cruisers_doctrines_desc:0 "We should focus on light cruisers and destroyers, they will help us better defend our coasts from any potential submarines that will be used sent against us by the syndicalists and other threats."
-NEE_yankee_marines:0 "Yankee Marines"
+NEE_yankee_marines:0 "양키 해병대"
 NEE_yankee_marines_desc:0 "We should create our own version of the Marine Corps based on the United States Marine Corps. Their elite training and prestige will suit us well in our own version that some have already dubbed, the Yankee Marines."
 
 ### Focuses - Air ###
-NEE_aviation:0 "New England Air Force"
+NEE_aviation:0 "뉴잉글랜드 공군"
 NEE_aviation_desc:0 "We should create the New England Air Force to defend the skies of New England. The question is should we favour bombers or fighters?"
-NEE_fighters:0 "Air support"
+NEE_fighters:0 "항공 지원"
 NEE_fighters_desc:0 "To protect New England Skies we should embrace the doctrine of Air support. By working with our ground forces and using our air force to destroy the enemy will keep New England safe."
-NEE_cas_effort:0 "Close Air Support"
+NEE_cas_effort:0 "근접 항공 지원"
 NEE_cas_effort_desc:0 "As we work with our Air force and our doctrine of Air Support, we should focus on Close Air Support aircraft."
-NEE_bombers:0 "Air Supremacy"
+NEE_bombers:0 "제공권의 절대적 우위"
 NEE_bombers_desc:0 "To protect New England Skies we should embrace the doctrine of Air Supremacy. By ruling the skies we will keep New England Safe from any danger."
-NEE_expand_air_ports:0 "New Aviators"
+NEE_expand_air_ports:0 "비행사 양성"
 NEE_expand_air_ports_desc:0 "As we work on building up the Air Force of New England we should bring in our new generation of Aviators into the air force to work on modernising and our air doctrines."
-NEE_naval_bombs:0 "Fighter Supporter"
+NEE_naval_bombs:0 ""
 NEE_naval_bombs_desc:0 "In order to rule the skies we should work to make sure that we have the best fighters in America. With the best fighters in New England's Arsenal then our freedom is ensured."
-NEE_found_wasp:0 "Found the WASPs"
+NEE_found_wasp:0 "WASPs 탐색"
 NEE_found_wasp_desc:0 "We should create the Women Airforce Service Pilots commonly called the WASP. This will help provide our female aviators who wish to help defend New England an organisation to do just that."
-NEE_boston_rockets:0 "Boston Rockets"
+NEE_boston_rockets:0 "보스턴 로켓"
 NEE_boston_rockets_desc:0 "As we proceed to improve our technology in regards to aircraft, a number of leading scientists seek to push for rockets with the hope of finding a way to improve our aircraft. We should give them support and see where this takes us."
 
 ### Focuses - Political ###
-NEE_second_hartford_convention:0 "Second Hartford Convention"
+NEE_second_hartford_convention:0 "제 2차 하트퍼드 협약"
 NEE_second_hartford_convention_desc:0 "As we have recently became independent following the Canadian take over of the region, a number of leading politicians are proposing that we come together at Hartford to figure out our future."
-NEE_torch_of_liberty:0 "Torch of Liberty"
+NEE_torch_of_liberty:0 "자유의 횃불"
 NEE_torch_of_liberty_desc:0 "The Torch of Liberty has passed to us and we shall light a beacon welcoming all whom seek refuge from the chaos in the world. Immigrants have often come to the US and many settled in the US. We should not turn our backs on them but help those that seek to come to New England and they will help us in return."
-NEE_birth_place_of_democracy:0 "Birthplace of Democracy"
+NEE_birth_place_of_democracy:0 "민주주의의 고향"
 NEE_birth_place_of_democracy_desc:0 "New England is the birthplace of Democracy in the Americas. From our earliest days we have supported democracy. Now that we are considering independence, we should make sure that we preserve democracy."
-NEE_new_england_towns:0 "New England Towns"
+NEE_new_england_towns:0 "뉴잉글랜드 소도시들"
 NEE_new_england_towns_desc:0 "The basis of government within New England are our various towns. If we are going to continue down this route of independence then we should reinforce the strength of our various townships and encourage civic engagement from the local level to to the highest level."
-NEE_city_upon_a_hill:0 "Puritan Work Ethic"
+NEE_city_upon_a_hill:0 "퓨리턴의 노동관"
 NEE_city_upon_a_hill_desc:0 "New England was founded by the puritans and as such their culture has long influenced New England. Notably the idea of Puritan work ethic. Now that we are seeking a new course, we should reconfirm ourselves to the frugal hard working ethic that made New England prosperous to begin with."
-NEE_new_england_liberalism:0 "New England Liberalism"
+NEE_new_england_liberalism:0 "뉴잉글랜드 자유주의"
 NEE_new_england_liberalism_desc:0 "While New England was founded by puritans, it also has a strong streak of liberalism throughout the region. We match our hard working ethic with a strong liberal streak. We should embrace this and make sure that we do not loose track by the efforts of radicals from the rest of the United States."
-NEE_new_england_constitution:0 "New England Constitution"
+NEE_new_england_constitution:0 "뉴잉글랜드 헌법"
 NEE_new_england_constitution_desc:0 "After many days of debate throughout the Hartford Convention, it is time to sign a new Constitution for New England to define what it means to be New England. It shall be based on the old united states constitution, but modified to reflect the ideals and spirit of New England."
-NEE_indepedent_new_england:0 "Independent New England"
+NEE_indepedent_new_england:0 "뉴잉글랜드 독립"
 NEE_indepedent_new_england_desc:0 "It is time to cast our selves from the United States. Though we were once Americans, the chaos that has engulfed the rest of the country has shown us that the only way forward for New England is to be an independent country. A new chapter shall begin!"
 
 ### Focuses - Foreign Policy ###
