--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -69,7 +69,7 @@ NEE_bombers:0 "제공권의 절대적 우위"
 NEE_bombers_desc:0 "To protect New England Skies we should embrace the doctrine of Air Supremacy. By ruling the skies we will keep New England Safe from any danger."
 NEE_expand_air_ports:0 "비행사 양성"
 NEE_expand_air_ports_desc:0 "As we work on building up the Air Force of New England we should bring in our new generation of Aviators into the air force to work on modernising and our air doctrines."
-NEE_naval_bombs:0 ""
+NEE_naval_bombs:0 "전투기 지지자"
 NEE_naval_bombs_desc:0 "In order to rule the skies we should work to make sure that we have the best fighters in America. With the best fighters in New England's Arsenal then our freedom is ensured."
 NEE_found_wasp:0 "WASPs 탐색"
 NEE_found_wasp_desc:0 "We should create the Women Airforce Service Pilots commonly called the WASP. This will help provide our female aviators who wish to help defend New England an organisation to do just that."
