--- a/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Poland_l_english.yml
@@ -15,10 +15,10 @@ POL_black_monday_desc:0 "독일발 검은 월요일이 우리에게도 영향을
 POL_black_monday1:0 "검은 월요일의 영향"
 POL_black_monday1_desc:0 "독일발 검은 월요일이 우리에게도 영향을 미치기 시작했습니다. 우리는 행동해야만 합니다."
 POL_eternal_regency:0 "영원한 섭정"
-POL_eternal_regency_desc:0 "폴란드의 새로운 왕을 결정하기 위해 처음으로 만들어졌던 폴란드 섭정 협의회는 약 20년간 지나치게 비대해 지고 비효율적이 되었습니다. 이것이 작은 나라인 폴란드에 가하는 부담은 한계에 이르렀습니다."
+POL_eternal_regency_desc:0 "폴란드의 새로운 왕을 결정하기 위해 처음으로 만들어졌던 폴란드 섭정 의회는 약 20년간 지나치게 비대해지고 비효율적이 되었습니다. 이것이 작은 나라인 폴란드에 가하는 부담은 한계에 이르렀습니다."
 POL_german_advisors:0 "독일 고문관들"
-POL_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our close ties with Germany, we can allow them to send us advisers to modernise our armed forces."
-POL_mathematics_schools:0 "수학 학교"
+POL_german_advisors_desc:0 "유럽 세계에서 계속 서있기 위해서는 군사적, 정치적 구조를 개혁하는 것이 가장 중요합니다. 독일과의 긴밀한 관계를 이용해서, 우리는 그들이 우리의 군사력을 현대화하는 것을 돕기 위해 고문단을 보내는 것을 허용할 수 있습니다."
+POL_mathematics_schools:0 "수학 대학"
 POL_mathematics_schools_desc:0 "이과 계열 학교들에 대한 자금 지원은 우리의 연구 개발 분야에서 큰 혜택을 줄 것입니다."
 POL_winged_hussars_idea:0 "윙드 후사르의 후예"
 POL_winged_hussars_idea_desc:0 "윙드 후사르들의 정신은 여전히 현대 폴란드군 안에 살아 숨쉬고 있습니다."
@@ -30,14 +30,14 @@ POL_assembly_lines_idea:0 "Contemporary Assembly Lines"
 POL_assembly_lines_idea_desc:0 "Assembly lines increase our factory efficiency."
 POL_air_radios_idea:0 "Personal Pilot Radios"
 POL_air_radios_idea_desc:0 "Allowing our pilots to communicate with one another improves their ability to perform complex manoeuvres."
-POL_euro_block_idea:0 "유럽 경제 협력체"
-POL_euro_block_idea_desc:0 "독일의 경제 협력체에 참가하는 것은 우리 경제가 부강해지는 데 기여할 것입니다."
+POL_euro_block_idea:0 "유럽 경제 연합체"
+POL_euro_block_idea_desc:0 "독일의 경제 연합체에 참가하는 것은 우리 경제가 부강해지는 데 기여할 것입니다."
 POL_an_absolute_monarch_idea:0 "An Absolute Monarch"
 POL_an_absolute_monarch_idea_desc:0 "All authority rests in the hands of the monarch."
 POL_centralized_state_idea:0 "A Centralised State"
 POL_centralized_state_idea_desc:0 "The nobles have been undercut at every turn, hurting their ability to influence the government."
-POL_a_new_sejm_idea:0 "새로운 폴란드 대의회"
-POL_a_new_sejm_idea_desc:0 "개혁된 대의회(Sejm)는 새로운 위협에 더 유연히 대처하고 합리적인 결정을 내릴 수 있습니다."
+POL_a_new_sejm_idea:0 "새로운 폴란드 세임"
+POL_a_new_sejm_idea_desc:0 "개혁된 세임(Sejm)은 새로운 위협에 더 유연히 대처하고 합리적인 결정을 내릴 수 있습니다."
 POL_trade_reform_idea:0 "International Trade Reform"
 POL_trade_reform_idea_desc:0 "Reforming our trade policy will keep us competitive in foreign markets."
 POL_poland_forever_idea:0 "폴란드여 영원하라"
@@ -50,13 +50,13 @@ POL_exceptionalism_idea:0 "Polish Exceptionalism"
 POL_exceptionalism_idea_desc:0 "The Polish people have been told they are exceptionable among all others, and will fight harder to prove it."
 POL_redistribute_wealth_idea:0 "Redistributed Wealth"
 POL_redistribute_wealth_idea_desc:0 "Wealth taken from the bourgeois redistributed to the people, for the good of all."
-POL_peoples_king_idea:0 "The People's King"
+POL_peoples_king_idea:0 "국민의 왕"
 POL_peoples_king_idea_desc:0 "Augustyn I Czartoryski inspires to Polish people to fight and defend their homes."
 POL_tech_sharing_idea:0 "Technology Sharing"
 POL_tech_sharing_idea_desc:0 "We are sharing our technology with our allies, and they are sharing with us in turn."
 POL_lessons_of_the_empire_idea:0 "Lessons of the Empire"
 POL_lessons_of_the_empire_idea_desc:0 "Taking from Austria's experience managing many minorities, we have taken steps to integrate our own minority peoples."
-POL_citizens_rights_idea:0 "Citizen's Rights"
+POL_citizens_rights_idea:0 "시민의 권리"
 POL_citizens_rights_idea_desc:0 "By empowering our citizens, we allow more to try more enlightening pursuits, such as joining the army."
 POL_monarchist_sympathies_idea:0 "Monarchist Sympathies"
 POL_monarchist_sympathies_idea_desc:0 "Sympathies for the old kingdom still pervade the government, and could become a threat if left unchecked for long..."
@@ -69,79 +69,79 @@ POL_suffrage_idea_desc:0 "The Polish Republic allows all of her citizen's equal 
 
 ### Focuses ###
 POL_the_great_debate:0 "대논쟁"
-polands_future:0 "The Regency Council will attempt to elect a new King of Poland, as they have done for the past 20 years."
-pol_succession:0 "In the event of the King's untimely demise, the succession will be secured."
-pol_abolished_the_sejm:0 "You will abolish the Sejm, preventing them from holding any future elections."
+polands_future:0 "섭정 의회는 지난 20년 동안 했던 것처럼, 폴란드의 새로운 왕을 선출하려 할 것입니다."
+pol_succession:0 "왕이 때가 아니게 서거하는 경우에는, 왕위 계승권이 보장될 것입니다."
+pol_abolished_the_sejm:0 "당신은 그들이 향후 선거를 치르는 것을 막기 위해, 세임을 폐지할 것입니다."
 POL_a_new_poland:0 "새로운 폴란드"
 POL_von_habsburg:0 "폰 합스부르크!"
-POL_von_hohenzollern:0 "작샌 왕!"
+POL_von_hohenzollern:0 "작센 왕!"
 POL_polish_king:0 "진정한 폴란드인 왕!"
-POL_reincorporate_lithuania:0 "Protect Lithuania"
-POL_line_of_succession:0 "A Clear Line of Succession"
-POL_join_international_community:0 "Join the International Community"
-POL_a_firm_hand:0 "A Firm Hand"
-POL_victory_of_the_people:0 "국민의 승리"
+POL_reincorporate_lithuania:0 "리투아니아 보호"
+POL_line_of_succession:0 "확실한 계승권"
+POL_join_international_community:0 "인터내셔널 공동체에 가입"
+POL_a_firm_hand:0 "확고한 통제"
+POL_victory_of_the_people:0 "인민의 승리"
 POL_join_federation:0 "오스트리아 연방에 가입하다"
-POL_return_galicia:0 "Return of Galicia"
-POL_lessons_of_the_empire:0 "Lessons of the Empire"
-POL_austrian_tech_sharing:0 "Membership in the Vienna Circle"
-POL_absolutism:0 "An Absolute Monarch"
-POL_reform_the_monarchy:0 "Reform the Monarchy"
+POL_return_galicia:0 "갈리치아 반환"
+POL_lessons_of_the_empire:0 "제국의 교훈"
+POL_austrian_tech_sharing:0 "빈 학파의 회원"
+POL_absolutism:0 "전제 군주"
+POL_reform_the_monarchy:0 "군주제 개혁"
 POL_abolish_the_council:0 "세임을 폐지하다"
 POL_citizens_rights:0 "시민의 권리"
-POL_a_centralized_state:0 "Undercut the Szlachta"
+POL_a_centralized_state:0 "슐라흐타를 약화시키다"
 POL_a_new_sejm:0 "새로운 세임"
-POL_poland_lithuania:0 "Polish-Lithuanian Commonwealth"
-POL_minority_rights:0 "Minority Rights"
-POL_a_new_constitution:0 "Write A New Constitution"
-POL_lithuanian_shipbuilding:0 "Lithuanian Shipbuilding"
-POL_new_trade_opportunities:0 "New Naval Officers"
-POL_join_mitteleuropa:0 "Join Mitteleuropa"
-POL_german_advisors:0 "Invite German Advisers"
-POL_join_economic_bloc:0 "Joining The European Economic Bloc"
-POL_german_tech_sharing:0 "The Kaiser Wilhelm Society"
-POL_the_entente:0 "The Entente"
-POL_russian_support:0 "Look to Russia"
-POL_naval_interdiction:0 "Naval Interdiction Strategies"
-POL_unrestircted_submarine_warfare:0 "Unrestricted Submarine Warfare"
+POL_poland_lithuania:0 "폴란드-리투아니아 연합왕국"
+POL_minority_rights:0 "소수층의 권리"
+POL_a_new_constitution:0 "새 헌법 제정"
+POL_lithuanian_shipbuilding:0 "리투아니아의 조선 기술"
+POL_new_trade_opportunities:0 "해군 장교 양성"
+POL_join_mitteleuropa:0 "미틀오이로파 가입"
+POL_german_advisors:0 "독일 고문단 초청"
+POL_join_economic_bloc:0 "유럽 경제 연합체 가입"
+POL_german_tech_sharing:0 "카이저 빌헬름 협회"
+POL_the_entente:0 "협상국"
+POL_russian_support:0 "러시아에 주목"
+POL_naval_interdiction:0 "해군 통합 전략"
+POL_unrestircted_submarine_warfare:0 "무제한 잠수함 작전"
 POL_a_new_navy:0 "새로운 폴란드 해군"
-POL_pride_of_the_baltic:0 "Pride of the Baltic"
-POL_polish_marines:0 "Foreign Polish Expeditions"
-POL_naval_industry:0 "Naval Buildup in Gdansk"
-POL_gdansk_agreement:0 "The Plotzk Agreement"
-POL_sieze_gdansk:0 "Crush Germany"
-POL_poland_forever:0 "Poland Forever"
-POL_beacon_of_polish_spirit:0 "Beacon of Polish Spirit"
-POL_not_yet_lost:0 "Not Yet Lost"
+POL_pride_of_the_baltic:0 "발트 해의 긍지"
+POL_polish_marines:0 "폴란드의 외국 원정"
+POL_naval_industry:0 "그단스크 해군 증강"
+POL_gdansk_agreement:0 "프워츠크 협정"
+POL_sieze_gdansk:0 "독일을 분쇄하라"
+POL_poland_forever:0 "폴란드여 영원하라"
+POL_beacon_of_polish_spirit:0 "폴란드인 정신의 등대"
+POL_not_yet_lost:0 "아직 패배가 아니다"
 POL_free_elections:0 "자유 선거를 유지하다"
 POL_economic_reform:0 "국제 무역 개혁"
-POL_new_universities:0 "Fund the Schools of Mathematics"
-POL_the_stab_in_the_back:0 "The Stab in the Back"
+POL_new_universities:0 "수학 대학에 투자"
+POL_the_stab_in_the_back:0 "뒤통수를 노리다"
 POL_militarism:0 "폴란드 군국주의"
 POL_cleanse_monarchists:0 "왕정주의자들을 분쇄한다"
 POL_fortress_poland:0 "폴란드 요새화"
-POL_opportunism:0 "The New Polish Opportunism"
-POL_reclaim_vilnus:0 "Reclaim Vilnius"
+POL_opportunism:0 "새로운 폴란드 기회주의"
+POL_reclaim_vilnus:0 "빌뉴스 영유권 재주장"
 POL_ruthenian_dispute:0 "루테니아 국경지역 분쟁"
-POL_cossack_alliance:0 "Reds in the Ukraine"
-POL_skewer_ukraine:0 "Skewer Ukraine"
+POL_cossack_alliance:0 "우크라이나의 좌경화"
+POL_skewer_ukraine:0 "우크라이나를 맹비난하다"
 POL_warsaw_pact:0 "바르샤바 협정"
 POL_invite_romania:0 "루마니아를 초대한다"
 POL_invite_hungary:0 "헝가리를 초대한다"
 POL_invite_georgia:0 "그루지야를 초대한다"
-POL_all_under_one:0 "All Under One"
+POL_all_under_one:0 "하나를 위한 전체"
 POL_polish_exceptionalism:0 "폴란드 예외주의"
-POL_new_communes:0 "Establish New Communes"
-POL_research_cities:0 "Research Cities"
-POL_radek_reforms:0 "Radek In Control"
-POL_leninist_plan:0 "Revival of Leninist Ideals"
-POL_luxembourg_world_revolution:0 "Róża Luksemburg's World Revolution"
-POL_attend_internationale:0 "Attend the Internationale"
-POL_join_france:0 "A Pact with France"
-POL_territorial_claims:0 "German Territorial Claims"
-POL_kickstart_navy:0 "Kick-start the New Navy"
-POL_austrian_claims:0 "Austrian Territorial Claims"
-POL_minstry_of_public_security:0 "The Ministry of Public Security"
+POL_new_communes:0 "새로운 코뮌 설립"
+POL_research_cities:0 "연구 도시들"
+POL_radek_reforms:0 "라데크의 지배"
+POL_leninist_plan:0 "레닌주의 이념의 부활"
+POL_luxembourg_world_revolution:0 "로자 룩셈부르크의 세계 혁명"
+POL_attend_internationale:0 "인터내셔널에 참여"
+POL_join_france:0 "프랑스와의 조약"
+POL_territorial_claims:0 "독일 영토 주장"
+POL_kickstart_navy:0 "새로운 해군에 시동을 걸다"
+POL_austrian_claims:0 "오스트리아 영토 주장"
+POL_minstry_of_public_security:0 "공공보안부"
 POL_international_agents:0 "International Polish Agents"
 POL_spread_the_revolution:0 "Spreading the Revolution"
 POL_redistribute_wealth:0 "Redistribute the Wealth"
@@ -166,15 +166,15 @@ POL_a_new_rifle:0 "The New Polish Rifle"
 POL_military_ideals:0 "An Offensive Fighting Force"
 POL_modern_military_thought:0 "Modern Military Thought"
 POL_military_desgin_bureaus:0 "Polish Military Design Bureau"
-POL_modern_cavalry:0 "신시대 기병"
-POL_winged_hussars:0 "The New Winged Hussars"
-POL_a_modern_panzer:0 "Flesh to Steel"
-POL_air_superiority:0 "Combat Air Superiority"
-POL_close_combat:0 "From Biplane to Fighter"
-POL_air_radios:0 "Personal Pilot Radios"
-POL_air_tactics:0 "Revised Air Combat Tactics"
-POL_support_focus:0 "Destroy Their Foot-Soldiers"
-POL_bomber_focus:0 "Destroy Their Homes"
+POL_modern_cavalry:0 "현대 기병"
+POL_winged_hussars:0 "새로운 윙드 후사르"
+POL_a_modern_panzer:0 "살을 철으로"
+POL_air_superiority:0 "제공권 전투"
+POL_close_combat:0 "복엽기를 전투기로"
+POL_air_radios:0 "개인 조종사 라디오"
+POL_air_tactics:0 "공중전 전술 변경"
+POL_support_focus:0 "그들의 보병을 파괴하라"
+POL_bomber_focus:0 "그들의 집을 파괴하라"
 
 POL_the_great_debate_desc:0 "The Regency Council continues its endless debate on who shall be elected the next King of Poland."
 POL_a_new_poland_desc:0 "The Kingdom is dead, long live the Republic! It is time for the nation to move forward under the new banner of democracy, and secure our future as a free and independent state."
@@ -227,10 +227,10 @@ POL_reclaim_vilnus_desc:0 "Vilnius is a historic part of the Polish-Lithuanian C
 POL_ruthenian_dispute_desc:0 "The region north of Brest-Livotsk, Baranavichy, is controlled by Ruthenia but a proper part of Poland, and the Ruthenians who currently occupy our rightful land must be made aware of this. We need to press our claims on this land!"
 POL_cossack_alliance_desc:0 "Syndicalists have seized power in Ukraine, and threaten our borders with their radical policies. We must strike first and strike quickly if we are to destroy this Syndicalist menace. The Cossacks may be amenable to a temporary alliance..."
 POL_skewer_ukraine_desc:0 "Ukraine must be destroyed, and destroyed immediately. Our claims to the entire region are weak, but enough to justify a war, if we so wish."
-POL_warsaw_pact_desc:0 "The Warsaw Pact"
-POL_invite_romania_desc:0 "Invite Romania"
-POL_invite_hungary_desc:0 "Invite Hungary"
-POL_invite_georgia_desc:0 "Invite Georgia"
+POL_warsaw_pact_desc:0 "바르샤바 조약"
+POL_invite_romania_desc:0 "루마니아를 초대"
+POL_invite_hungary_desc:0 "헝가리를 초대"
+POL_invite_georgia_desc:0 "조지아를 초대"
 POL_all_under_one_desc:0 "We must begin a blistering propaganda campaign to bring all the Polish people in line under Radek, so that he may move the nation forward as one."
 POL_polish_exceptionalism_desc:0 "The Polish people must be taught that they are exceptional, that they are the strongest and greatest people in all of Europe. In doing so, they will fight harder and longer in time of war, and work harder and longer in times of peace."
 POL_new_communes_desc:0 "We must move the nation's power out of the hands of the bourgeois and into the hands of the people. New and stronger communes will enhance the ability of the people to defend themselves against capitalist influences, and strengthen the resolve of our people."
@@ -838,19 +838,19 @@ poland.112.d:0 "The Polish-Lithuanian Commonwealth lost much during the partitio
 poland.112.a:0 "Press claims on all our rightful lands!"
 poland.112.b:0 "Press claims on the Prussian partition and Silesia."
 poland.112.c:0 "We can't provoke the Germans!"
-poland.113.t:0 "Germany is Falling"
-poland.113.d:0 "The German armies are defeated, Berlin has no chance of winning. It is our chance to regain our rightful lands and participate in this Prussian Partition."
-poland.113.a:0 "Attack!"
-poland.113.b:0 "Those claims were a mistake."
-poland.114.t:0 "German Empire in Disarray"
-poland.114.d:0 "With the German Empire in turmoil, we have a great opportunity to seize parts of Silesia and entire Greater Poland. There is very little the German Empire government can do to stop us at this point."
-poland.114.a:0 "Seize Silesia and Greater Poland!"
-poland.114.b:0 "Rather not..."
-poland.114.c:0 "We must ally with German Empire."
-poland.115.t:0 "Poland Occupies Silesia and Greater Poland!"
-poland.115.d:0 "With our empire in chaos Poland used this opportunity to occupy parts of Silesia and Greater Poland. Currently there is very little that we can do to stop Poland."
-poland.115.a:0 "There is nothing we can do."
-poland.115.b:0 "This means WAR!"
+poland.113.t:0 "독일 제국은 무너지는 중입니다"
+poland.113.d:0 "독일 육군은 패배했고, 베를린이 승리할 가능성은 없어 보입니다. 이것은 우리의 정당한 영토를 되찾고 프로이센 분할에 참여할 수 있는 절호의 기회입니다."
+poland.113.a:0 "공격하라!"
+poland.113.b:0 "그 주장들은 실수였다."
+poland.114.t:0 "독일 제국은 혼란에 빠져 있습니다"
+poland.114.d:0 "독일 제국이 혼란에 빠지면서, 우리는 실레지아와 대 폴란드의 고토를 장악할 수 있는 좋은 기회를 얻었습니다. 독일 제국 정부가 우리를 이 시점에서 멈추게 할 수 있는 방법은 거의 없습니다."
+poland.114.a:0 "실레지아와 대 폴란트 영토를 장악하라!"
+poland.114.b:0 "하지 않는 편이 낫다..."
+poland.114.c:0 "우리는 독일 제국과 동맹을 맺어야만 한다."
+poland.115.t:0 "폴란드가 실레지아와 대 폴란드를 장악했습니다!"
+poland.115.d:0 "우리가 혼돈에서 헤어나오지 못하는 틈을 타서, 폴란드는 실레지아와 대 폴란드의 고토를 장악했습니다. 현재 우리가 폴란드를 이 시점에서 멈추게 할 수 있는 방법은 거의 없습니다."
+poland.115.a:0 "우리가 할 수 있는 것은 없다."
+poland.115.b:0 "그건 전쟁을 뜻한다!"
 poland.116.t:0 "Poland Offers an Alliance"
 poland.116.d:0 "Poland, worried about recent developments in the Syndicalist-Mitteleuropa war has offered us their support in defeating the Syndicalists and their supporters."
 poland.116.a:0 "YES!"
