--- a/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_New_England_l_english.yml
@@ -292,5 +292,5 @@ neeflavor.32.d:0 "왕 겸 황제 에드워드 8세와 그의 아내인 오를레
 neeflavor.32.a:0 "보스턴에 온 것을 환영한다!"
 
 neeflavor.33.t:0 "왕실의 방문"
-neeflavor.33.d:0 "King-Emperor Edward the 8th and his wife Isabelle of Orleans have arrived in Boston today to mark improved ties between New England and Canada. This is the first time that a reigning British monarch has visited Boston in its entire history. As to be expected large jubilant crowds of New Englanders have come out to catch a sight of the King and Queen of the British Empire. The visit was more then just seeing the sites of the sites for they also came to discuss politics with the various leaders of note in New England."
+neeflavor.33.d:0 "왕 겸 황제 에드워드 8세와 그의 아내인 오를레앙의 이사벨은 뉴잉글랜드와 캐나다 간의 관계가 개선되었음을 보여 주기 위해 오늘 보스턴에 도착했습니다. 현 영국 국왕이 보스턴을 방문한 것은 이번이 처음입니다. 뉴잉글랜드의 기쁨에 넘치는 많은 군중이 대영 제국의 왕과 왕비를 보기 위해 기꺼이 밖으로 나왔습니다. 방문은 단지 도시를 둘러보는 것 그 이상의 것이었는데, 그들은 또한 뉴잉글랜드에서 주목 받고 있는 다양한 지도자들과 정치에 대해 논의하기 위해 왔기 때문입니다."
 neeflavor.33.a:0 "보스턴에 온 것을 환영한다!"
