--- a/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
@@ -1,58 +1,58 @@
 l_english:
 
 ### Ideas ###
-china_united_sqi:0 "China United"
-AOG_refugeese:0 "AOG Refugees"
-trads_bribe:0 "Triads Bribe"
-deal_with_mongolia:0 "Deal with Mongolia"
-deal_with_china:0 "Deal with China"
-china_united_tie:0 "China United"
-tian_reserach_inst:0 "Research finance"ç
-qie_pesants_join_our_army:0 "Qing peasants join our Army"
+china_united_sqi:0 "통합된 중국"
+AOG_refugeese:0 "일반동아시아회사 난민"
+trads_bribe:0 "삼합회 "
+deal_with_mongolia:0 "몽골과의 거래"
+deal_with_china:0 "중국과의 거래"
+china_united_tie:0 "통합된 중국"
+tian_reserach_inst:0 "재무 조사"
+qie_pesants_join_our_army:0 "청나라 농민들이 우리군에 합류함."
 
 ### Parties ### (Shangqing Parties)
 SQI_totalist_party:0 "CPP"
-SQI_totalist_party_long:0 "Chinese People's Party"
+SQI_totalist_party_long:0 "중화인민당"
 SQI_radical_socialist_party:0 "CPP"
-SQI_radical_socialist_party_long:0 "Chinese People's Party"
+SQI_radical_socialist_party_long:0 "중화인민당"
 SQI_syndicalist_party:0 "CPP"
-SQI_syndicalist_party_long:0 "Chinese People's Party"
+SQI_syndicalist_party_long:0 "중화인민당"
 SQI_social_democrat_party:0 "CDSP"
-SQI_social_democrat_party_long:0 "China Democratic Socialist Party"
+SQI_social_democrat_party_long:0 "중국 민주사회당"
 SQI_social_liberal_party:0 "DPC"
-SQI_social_liberal_party_long:0 "Democracy Party of China"
-SQI_market_liberal_party:0 "Kuomintang"
-SQI_market_liberal_party_long:0 "Kuomintang"
-SQI_social_conservative_party:0 "Intellectualists"
-SQI_social_conservative_party_long:0 "Intellectualist Faction"
+SQI_social_liberal_party_long:0 "중국 민주당"
+SQI_market_liberal_party:0 "국민당"
+SQI_market_liberal_party_long:0 "국민당"
+SQI_social_conservative_party:0 "지식인들"
+SQI_social_conservative_party_long:0 "지식인파"
 SQI_authoritarian_democrat_party:0 "IP"
-SQI_authoritarian_democrat_party_long:0 "Imperial Party"
+SQI_authoritarian_democrat_party_long:0 "황실당"
 SQI_paternal_autocrat_party:0 "IP"
-SQI_paternal_autocrat_party_long:0 "Imperial Party"
-SQI_national_populist_party:0 "Brotherhood"
-SQI_national_populist_party_long:0 "Brotherhood"
+SQI_paternal_autocrat_party_long:0 "황실당"
+SQI_national_populist_party:0 "형제단"
+SQI_national_populist_party_long:0 "형제단"
 
 ### Parties ### (Tian Empire Parties)
 TIE_totalist_party:0 "CPP"
-TIE_totalist_party_long:0 "Chinese People's Party"
+TIE_totalist_party_long:0 "중화인민당"
 TIE_radical_socialist_party:0 "CPP"
-TIE_radical_socialist_party_long:0 "Chinese People's Party"
+TIE_radical_socialist_party_long:0 "중화인민당"
 TIE_syndicalist_party:0 "CPP"
-TIE_syndicalist_party_long:0 "Chinese People's Party"
+TIE_syndicalist_party_long:0 "중화인민당"
 TIE_social_democrat_party:0 "CDSP"
-TIE_social_democrat_party_long:0 "China Democratic Socialist Party"
+TIE_social_democrat_party_long:0 "중국 민주사회당"
 TIE_social_liberal_party:0 "DPC"
-TIE_social_liberal_party_long:0 "Democracy Party of China"
-TIE_market_liberal_party:0 "Kuomintang"
-TIE_market_liberal_party_long:0 "Kuomintang"
-TIE_social_conservative_party:0 "Intellectualists"
-TIE_social_conservative_party_long:0 "Intellectualist Faction"
+TIE_social_liberal_party_long:0 "중국 민주당"
+TIE_market_liberal_party:0 "국민당"
+TIE_market_liberal_party_long:0 "국민당"
+TIE_social_conservative_party:0 "지식인들"
+TIE_social_conservative_party_long:0 "지식인파"
 TIE_authoritarian_democrat_party:0 "IP"
-TIE_authoritarian_democrat_party_long:0 "Imperial Party"
+TIE_authoritarian_democrat_party_long:0 "황실당"
 TIE_paternal_autocrat_party:0 "IP"
-TIE_paternal_autocrat_party_long:0 "Imperial Party"
-TIE_national_populist_party:0 "Brotherhood"
-TIE_national_populist_party_long:0 "Brotherhood"
+TIE_paternal_autocrat_party_long:0 "황실당"
+TIE_national_populist_party:0 "형제단"
+TIE_national_populist_party_long:0 "형제단"
 
 ### Opinion Modifiers ###
 GER_MANCHU_EMP:0 "Germany supports our Manchu Empire... at a cost."
@@ -77,7 +77,7 @@ TIAN_south_LEC_ps_10:0 "Tian won't do nothing to the Legation Cities"
 TIAN_attack_LEC:0 "Tian attack the Legation Cities"
 Tian_neg_TIB:0 "Tian negotiates with us"
 TIB_send_dipl_away:0 "Tibet send our diplomats away"
-Tian_capture_PuYi:0 "Tian capture PuYi"
+Tian_capture_PuYi:0 "천이 푸이를 생포함"
 
 ### Events ###
 shanqing.1.t:0 "A like minded revolution"
